--- a/style.css
+++ b/style.css
@@ -1,50 +1,66 @@
-body {
+html,body {
   margin: 0;
-  padding: 0;
-  font-family: Arial;
+  width: 100%;
+  height: 100%;
 }
-#Barra{
+#Tela {
+  margin: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
-  overflow-y: auto;
-  border-bottom: 0.3vh solid rgb(233, 233, 233);
+  flex-direction: column;
 }
-.Opcao{
-  text-align: center;
-  margin: 1vh 1vw 1vw 1vh;
+#Barra {
+  margin: 1% 1% 0% 1%;
+  display: flex; 
+  justify-content: space-around;
+  align-items: center;
 }
-.Opcao h4{
-  margin: 0;
+#Barra *{
+  flex:1;
+  height: 4vh;
+  border: none;
+  cursor: pointer;
+  border-radius: 3px;
+  padding-inline: 1vw;
+  background-color: #FFF;
+  border: 1px solid #000;
+  color: #000;
+  outline: none;
+  margin-inline: 1%;
 }
-.Opcao input[type="file"] {
+#Barra input[type="color"] {
+  border: none;
+  background-color: transparent;
+}
+#EntradaDeArquivo{ 
   display: none;
 }
-.Opcao button {
-  margin-top: 1vh;
-  text-align: center;
-  font-weight: bold;
-  height: 3.5vh;
-  width: 100%;
-  cursor: pointer;
-  border: none;
-  background-color:rgb(47, 183, 42);
-  color:rgb(255, 255, 255);
+#BotaoEntradaDeArquivo {
+  
 }
-.Opcao input{
-  margin-top: 1vh;
-  text-align: center;
-  height: 3vh;
-  width: 100%;
-  cursor: pointer;
-  border: none;
-  background-color:rgb(255, 255, 255);
-  color:rgb(0, 0, 0);
-  border: 0.3vh solid rgb(233, 233, 233);
-} 
-.Opcao input[type="color"] {
-  margin-top: 0.5vh;
-  height: 4.5vh;
-  border: none;
+#PaginasDeCaractere {
+ 
+}
+#TamanhoDosCaracteres {
+
+}
+#TamanhoDoContorno {
+  
+}
+#CorDosCaracteres {
+
+}
+#CorDeFundo {
+  
+}
+#CorDoContorno {
+  
 }
 #Caracteres {
-  text-align: center;
+  resize: none;
+  margin: 1% 1% 1% 1%;
+  flex: 1 1;
+  outline: none;
+  border: none;
 }
