--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: "Cantarell";
-    src: url('Cantarell.otf');
-    font-display: optional;
+	font-family: "Cantarell";
+	src: url('Cantarell.otf');
+	font-display: optional;
 }
 
 :root {
@@ -53,7 +53,10 @@ body {
 	padding-inline: var(--espaco);
 }
 
-#EntradaDeArquivo, #CorDosCaracteres,#CorDeFundo ,#CorDoContorno {
+#EntradaDeArquivo,
+#CorDosCaracteres,
+#CorDeFundo,
+#CorDoContorno {
 	display: none;
 }
 
@@ -77,7 +80,7 @@ body {
 	background-color: transparent;
 }
 
-.barra_opcao *{
+.barra_opcao * {
 	height: 4vh;
 	border: none;
 	background-color: transparent;
@@ -97,8 +100,10 @@ body {
 	text-align: center;
 }
 
-#BotaoCorDosCaracteres,#BotaoCorDeFundo ,#BotaoCorDoContorno {
-	flex:content;
+#BotaoCorDosCaracteres,
+#BotaoCorDeFundo,
+#BotaoCorDoContorno {
+	flex: content;
 	min-width: 5vh;
 	max-width: 5vh;
 	margin-top: 10px;
@@ -115,36 +120,40 @@ body {
 	font-size: 20px;
 	background-color: transparent;
 }
+
 #BotaoCorDosCaracteres {
 	background-color: var(--cor-texto);
 }
+
 #BotaoCorDeFundo {
 	background-color: var(--cor-fundo);
 }
+
 #BotaoCorDoContorno {
 	background-color: var(--cor-fundo);
 }
 
 
 #Caracteres {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 	padding: var(--espaco-metade);
 	margin: auto;
-    width: calc(100% - var(--espaco-dobro));
-    height: calc(100% - var(--espaco-dobro));
+	width: calc(100% - var(--espaco-dobro));
+	height: calc(100% - var(--espaco-dobro));
 	resize: none;
 	border: var(--borda-normal);
 	border-radius: var(--raio-borda);
 	color: var(--cor-texto);
 	background-color: var(--cor-fundo);
 	-webkit-text-stroke-color: var(--cor-fundo);
+
 	@media (max-width: 800px) {
-        width: 100%;
-        border: none;
-        border-radius: 0px;
-        border-block: var(--borda-normal);
-    }
+		width: 100%;
+		border: none;
+		border-radius: 0px;
+		border-block: var(--borda-normal);
+	}
 }
 
 #Caracteres:focus {
