--- a/style.css
+++ b/style.css
@@ -10,12 +10,16 @@
 	--cor-texto: #111111;
 	--cor-borda: #7F7F7F;
 	--cor-azul: #4096f5;
+	--cor-vermelha: #ff7084;
+    --cor-verde: #63c259;
+    --cor-amarela: #efc72a;
 	--borda-normal: solid 2px var(--cor-borda);
 	--borda-destaque: solid 2px var(--cor-azul);
+	--sem-borda: solid 2px transparent;
 	--raio-borda: 15px;
-	--espaco-metade: 10px;
-	--espaco: 20px;
-	--espaco-dobro: 40px;
+	--espaco-1: 10px;
+	--espaco-2: 20px;
+	--espaco-4: 40px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -38,37 +42,29 @@ body {
 	margin: 0;
 	width: 100vw;
 	height: 100vh;
-	background-color: var(--cor-fundo);
 	display: flex;
 	flex-direction: column;
+	background-color: var(--cor-fundo);
 }
 
 .barra {
 	width: 100%;
+	height: 8vh;
 	display: flex;
 	flex-direction: row;
 	overflow-y: hidden;
 	overflow-x: scroll;
-	gap: var(--espaco);
-	padding-inline: var(--espaco);
+	gap: var(--espaco-2);
+	padding-inline: var(--espaco-2);
+	padding-block: var(--espaco-1);
 }
 
-#EntradaDeArquivo,
-#CorDosCaracteres,
-#CorDeFundo,
-#CorDoContorno {
+.ocultar {
 	display: none;
 }
 
-#BotaoEntradaDeArquivo {
-	padding: 10px;
-}
-
 .barra_opcao {
-	margin-top: 10px;
-	margin-bottom: 16px;
 	text-decoration: none;
-	cursor: pointer;
 	text-align: center;
 	border: var(--borda-normal);
 	border-radius: var(--raio-borda);
@@ -78,6 +74,11 @@ body {
 	white-space: nowrap;
 	font-size: 20px;
 	background-color: transparent;
+}
+
+.barra select,
+.barra button {
+	padding-inline: var(--espaco-1);
 }
 
 .barra_opcao * {
@@ -89,27 +90,11 @@ body {
 	font-size: 1.4rem;
 }
 
-.seta:hover {
-	cursor: pointer;
-	color: var(--cor-azul);
-}
-
-.barra_opcao input[type=number] {
-	appearance: textfield;
-	-moz-appearance: textfield;
-	text-align: center;
-}
-
-#BotaoCorDosCaracteres,
-#BotaoCorDeFundo,
-#BotaoCorDoContorno {
-	flex: content;
-	min-width: 5vh;
-	max-width: 5vh;
-	margin-top: 10px;
-	margin-bottom: 16px;
-	text-decoration: none;
-	cursor: pointer;
+.trocar_cor,
+.entrada_cor {
+	width: auto;
+	height: 100%;
+	aspect-ratio: 1/1;
 	text-align: center;
 	border: var(--borda-normal);
 	border-radius: var(--raio-borda);
@@ -119,6 +104,21 @@ body {
 	white-space: nowrap;
 	font-size: 20px;
 	background-color: transparent;
+}
+
+.trocar_cor {
+	border: var(--sem-borda);
+}
+
+.seta:hover {
+	cursor: pointer;
+	color: var(--cor-azul);
+}
+
+.barra_opcao input[type=number] {
+	appearance: textfield;
+	-moz-appearance: textfield;
+	text-align: center;
 }
 
 #BotaoCorDosCaracteres {
@@ -133,21 +133,20 @@ body {
 	background-color: var(--cor-fundo);
 }
 
-
-#Caracteres {
-	width: 100%;
-	height: 100%;
-	padding: var(--espaco-metade);
+.bloco_caracteres {
+	display: flex;
+	flex-direction: column;
 	margin: auto;
-	width: calc(100% - var(--espaco-dobro));
-	height: calc(100% - var(--espaco-dobro));
+	width: calc(100% - var(--espaco-4));
+	height: calc(100% - var(--espaco-4));
 	resize: none;
 	border: var(--borda-normal);
 	border-radius: var(--raio-borda);
 	color: var(--cor-texto);
 	background-color: var(--cor-fundo);
 	-webkit-text-stroke-color: var(--cor-fundo);
-
+	font-weight: 400;
+	overflow: hidden;
 	@media (max-width: 800px) {
 		width: 100%;
 		border: none;
@@ -156,7 +155,27 @@ body {
 	}
 }
 
-#Caracteres:focus {
+.bloco_caracteres textarea {
+	display: flex;
+	outline: none;
+	flex: 50%;
+	resize: none;
+	border: none;
+	color: var(--cor-texto);
+	background-color: var(--cor-fundo);
+	-webkit-text-stroke-color: var(--cor-fundo);
+	font-weight: 400;
+	padding: var(--espaco-1);
+}
+
+#Caracteres2{
+	display: none;
+	border-top: var(--borda-normal);
+}
+
+.acao:hover,
+.acao:focus {
+	cursor: pointer;
 	outline: none;
 	border: var(--borda-destaque);
 }
@@ -164,4 +183,15 @@ body {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
+}
+
+#contraste {
+	border-radius: var(--raio-borda);
+	border: solid 2px var(--cor-verde);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 20px;
+	padding-inline: var(--espaco-1);
+	white-space: nowrap;
 }
