--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 	--cor-borda: #7F7F7F;
 	--cor-azul: #4096f5;
 	--cor-vermelha: #ff7084;
-    --cor-verde: #63c259;
-    --cor-amarela: #efc72a;
+	--cor-verde: #63c259;
+	--cor-amarela: #efc72a;
 	--borda-normal: solid 2px var(--cor-borda);
 	--borda-destaque: solid 2px var(--cor-azul);
 	--sem-borda: solid 2px transparent;
@@ -20,6 +20,8 @@
 	--espaco-1: 10px;
 	--espaco-2: 20px;
 	--espaco-4: 40px;
+	--altura-4: 2.4rem;
+	--tamanho-fonte: 20px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,8 +34,8 @@
 
 * {
 	color: var(--cor-texto);
-	font-family: 'Cantarell';
-	font-size: 12px;
+	font-family: 'Cantarell', 'Segoe UI', 'Tahoma', sans-serif;
+	font-size: var(--tamanho-fonte);
 	box-sizing: border-box;
 }
 
@@ -45,12 +47,14 @@ body {
 	display: flex;
 	flex-direction: column;
 	background-color: var(--cor-fundo);
+	justify-content:space-evenly;
+	align-items: center;
 }
 
 .barra {
-	width: 100%;
-	height: 8vh;
 	display: flex;
+	width: 100%;
+	height: auto;
 	flex-direction: row;
 	overflow-y: hidden;
 	overflow-x: scroll;
@@ -64,15 +68,16 @@ body {
 }
 
 .barra_opcao {
+	height: var(--altura-4);
+	display: flex;
+	max-width: min-content;
+	justify-content: space-between;
 	text-decoration: none;
 	text-align: center;
+	align-items: center;
 	border: var(--borda-normal);
 	border-radius: var(--raio-borda);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 	white-space: nowrap;
-	font-size: 20px;
 	background-color: transparent;
 }
 
@@ -82,31 +87,26 @@ body {
 }
 
 .barra_opcao * {
-	height: 4vh;
 	border: none;
 	background-color: transparent;
+	height: 100%;
 	width: auto;
 	aspect-ratio: 1/1;
-	font-size: 1.4rem;
 }
 
 .trocar_cor,
 .entrada_cor {
 	width: auto;
-	height: 100%;
+	height: var(--altura-4);
 	aspect-ratio: 1/1;
 	text-align: center;
+	background-color: transparent; 
 	border: var(--borda-normal);
 	border-radius: var(--raio-borda);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	white-space: nowrap;
-	font-size: 20px;
-	background-color: transparent;
 }
 
 .trocar_cor {
+	
 	border: var(--sem-borda);
 }
 
@@ -136,9 +136,9 @@ body {
 .bloco_caracteres {
 	display: flex;
 	flex-direction: column;
-	margin: auto;
-	width: calc(100% - var(--espaco-4));
-	height: calc(100% - var(--espaco-4));
+	flex: 1;
+	width: calc(100vw - var(--espaco-4));
+	height: auto;
 	resize: none;
 	border: var(--borda-normal);
 	border-radius: var(--raio-borda);
@@ -147,6 +147,7 @@ body {
 	-webkit-text-stroke-color: var(--cor-fundo);
 	font-weight: 400;
 	overflow: hidden;
+
 	@media (max-width: 800px) {
 		width: 100%;
 		border: none;
@@ -168,7 +169,7 @@ body {
 	padding: var(--espaco-1);
 }
 
-#Caracteres2{
+#Caracteres2 {
 	display: none;
 	border-top: var(--borda-normal);
 }
@@ -191,7 +192,37 @@ input::-webkit-inner-spin-button {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	font-size: 20px;
 	padding-inline: var(--espaco-1);
 	white-space: nowrap;
 }
+
+ @-moz-document url-prefix() {
+	* {
+		scrollbar-color: var(--cor-azul) transparent;
+	}
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+
+	::-webkit-scrollbar {
+		width: 5px;
+		height: 5px;
+	}
+
+	::-webkit-scrollbar-track {
+		background: transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		border-radius: var(--raio-borda);
+		background-color: var(--cor-borda);
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		cursor: pointer;
+		background-color: var(--cor-azul);
+	}
+	.trocar_cor {
+		font-size: var(--tamanho-fonte);
+	}
+} 
